Added more tests for upgrades and downgrades across instance-buying.

--- a/boto_example.config
+++ b/boto_example.config
@@ -8,8 +8,7 @@ emr_region_name = us-west-1
 emr_region_endpoint = us-west-1.elasticmapreduce.amazonaws.com
 ec2_region_endpoint = us-west-1.ec2.amazonaws.com
 
-## DONT INCLUDE ANYTHING AFTER THIS POINT (and including this line)
-## all the the regions called us-west-1 should be the same, dont mix and match.
+## Here are some examples of other regions tat you can use other than us-west-1
 ## The list of possible regions are currently (June 28th 2012):
 ## us-east-1 (US EAST)
 ## us-west-1 (US WEST NORTH CALFORNIA)
