--- a/boto_example.config
+++ b/boto_example.config
@@ -8,9 +8,8 @@ emr_region_name = us-west-1
 emr_region_endpoint = us-west-1.elasticmapreduce.amazonaws.com
 ec2_region_endpoint = us-west-1.ec2.amazonaws.com
 
-## Here are some examples of other regions tat you can use other than us-west-1
+## Here are some examples of other regions that you can use other than us-west-1
 ## The list of possible regions are currently (June 28th 2012):
-## us-east-1 (US EAST)
 ## us-west-1 (US WEST NORTH CALFORNIA)
 ## us-west-2 (US WEST OREGON)
 ## eu-west-1 (EU IRELAND)
